[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionchat"
version = "0.1.0"
description = "Multi-model fusion chat with a master synthesizer and up to three fusion models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Empero", email = "hello@empero.org"}]
keywords = ["chat", "llm", "fusion", "openai", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0.1",
    "rich>=13.0",
    "textual>=0.58",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
fusionchat = "fusionchat.__main__:main"

[project.urls]
Homepage = "https://github.com/kodee2k/fusionchat"
Repository = "https://github.com/kodee2k/fusionchat"
Issues = "https://github.com/kodee2k/fusionchat/issues"
Changelog = "https://github.com/kodee2k/fusionchat/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["fusionchat*"]

[tool.setuptools.package-data]
fusionchat = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
